@@ -14,6 +14,7 @@ at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)
 
 Version 1.0.8.8
   -  Added language files
+     * Genie (Nicolas Joseph)
      * GwBasic (José Gabriel Moya Yangüela)
      * HicEst (Georg Petrich)
      * Icon (Matt Oates)
